--- a/P000104.opf/layers/v001/BookTitle.yml
+++ b/P000104.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: fa106f4b898d4f2fab05602a4fdb141c
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
