--- a/P000104.opf/layers/v001/Yigchung.yml
+++ b/P000104.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: d378cbb0ead94025bf54e2854fb4cf93
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 33e18c77e5154bbd9cfb478b904ae5ab
