corrected annotation_type

--- a/P000104.opf/layers/v001/Quotation.yml
+++ b/P000104.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: db4650b270b44e4a836d3207ae08e8c6
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   91ddf74c2bba455f913de25e3e2f3e23:
